--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <nav>
-        <a href="javascript:void(0)">Login</a>
+        <a href="https://coralsilver.github.io">Login</a>
     </nav>
 </body>
 
